# prac2cram

./: CMakeLists.txt  README.md  package.xml  prac2cram.asd
msg/: ActionCore.msg  ActionRole.msg  CRAMTick.msg  Task.msg
scripts/: SIM_MNGR.py  actioncore_testcases.yaml  p2c_rosaux.py  prac2cram2_example.py  prac2cram_HTTP_bridge.py  prac2cram_RPC_Client.py  prac2cram_RPC_Server.py  prac2cram_client.py  sim_inst_mngr.py  sim_rpc.py  statecodes.py  wordnet_mappings.yaml
scripts/prac2cram_RPC_Client/: setup.py
scripts/prac2cram_RPC_Client/prac2cram_RPC_Client/: ActionCore.py  ActionRole.py  prac2cram_RPC_Client.py
scripts/prac2cram_RPC_Server/: prac2cram_RPC_Server.py
src/: code-generation.lisp  conditions.lisp  listener.lisp  package.lisp  parameters.lisp  prac2cram-server.lisp  prac2cram2-server.lisp  ptr-language.lisp  substitute-query.lisp  talker.lisp  test.lisp  utils.lisp
srv/: CancelSim.srv  POSTRequest.srv  Prac2Cram.srv  Prac2Cram2.srv
